# contest.yandex.36783

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  go.mod
A/: README.md
A/cpp/: code.cpp
A/js/: code.js
A/python/: code.py
B/: README.md
B/cpp/: code.cpp
B/go/: code.go
B/js/: code.js
B/python/: code.py
C/: README.md
C/cpp/: code.cpp  input.txt
C/python/: code.py
D/: README.md
D/cpp/: code.cpp  input.txt
D/go/: code.go
E/: README.md
E/cpp/: code.cpp
F/: README.md
F/cpp/: code.cpp
G/: README.md
G/cpp/: code.cpp
M/: README.md
M/cpp/: code.cpp
