cmake_minimum_required(VERSION 3.23)
project(contest_yandex_36783)

set(CMAKE_CXX_STANDARD 17)

add_executable(A A/cpp/code.cpp)
add_executable(B B/cpp/code.cpp)
add_executable(C C/cpp/code.cpp)
add_executable(D D/cpp/code.cpp)
add_executable(E E/cpp/code.cpp)
add_executable(F F/cpp/code.cpp)
add_executable(G G/cpp/code.cpp)
add_executable(H H/cpp/code.cpp)
add_executable(I I/cpp/code.cpp)
add_executable(J J/cpp/code.cpp)
add_executable(K K/cpp/code.cpp)
add_executable(L L/cpp/code.cpp)
add_executable(M M/cpp/code.cpp)
add_executable(N N/cpp/code.cpp)
add_executable(O O/cpp/code.cpp)
add_executable(P P/cpp/code.cpp)
add_executable(Q Q/cpp/code.cpp)
add_executable(R R/cpp/code.cpp)
add_executable(S S/cpp/code.cpp)
add_executable(T T/cpp/code.cpp)
add_executable(U U/cpp/code.cpp)
